force-app/main/default/objects/Caz_Assessment__dlm/fields/assessment_type__c.field-meta.xml
<CustomField>
    <fullName>assessment_type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Assessment Type</labelOverride>
        <masterLabel>Assessment Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>