force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_borrowingpurpose__c.field-meta.xml
<CustomField>
    <fullName>bc_borrowingpurpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowing Purpose</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Borrowing Purpose</labelOverride>
        <masterLabel>Borrowing Purpose</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>