force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_capacitytorepay__c.field-meta.xml
<CustomField>
    <fullName>bc_capacitytorepay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capacity To Repay</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Capacity To Repay</labelOverride>
        <masterLabel>Capacity To Repay</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>