force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_familyimpact__c.field-meta.xml
<CustomField>
    <fullName>bc_familyimpact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Family Impact</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Family Impact</labelOverride>
        <masterLabel>Family Impact</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>