force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_productindemnityguaranteeamount__c.field-meta.xml
<CustomField>
    <fullName>bc_productindemnityguaranteeamount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Indemnity Guarantee Amount</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Indemnity Guarantee Amount</labelOverride>
        <masterLabel>Product Indemnity Guarantee Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>