force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_producttermloanamount__c.field-meta.xml
<CustomField>
    <fullName>bc_producttermloanamount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Term Loan Amount</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Term Loan Amount</labelOverride>
        <masterLabel>Product Term Loan Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>