force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_producttermloanfrequency__c.field-meta.xml
<CustomField>
    <fullName>bc_producttermloanfrequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Term Loan Frequency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Term Loan Frequency</labelOverride>
        <masterLabel>Product Term Loan Frequency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>