force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_producttermloanselect__c.field-meta.xml
<CustomField>
    <fullName>bc_producttermloanselect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Term Loan Select</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Term Loan Select</labelOverride>
        <masterLabel>Product Term Loan Select</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>