force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_protectbusinessinsurance__c.field-meta.xml
<CustomField>
    <fullName>bc_protectbusinessinsurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Protect Business Insurance</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Protect Business Insurance</labelOverride>
        <masterLabel>Protect Business Insurance</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>