force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_retirementconfidence__c.field-meta.xml
<CustomField>
    <fullName>bc_retirementconfidence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retirement Confidence</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Retirement Confidence</labelOverride>
        <masterLabel>Retirement Confidence</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>