force-app/main/default/objects/Caz_Assessment__dlm/fields/bc_structuredetails__c.field-meta.xml
<CustomField>
    <fullName>bc_structuredetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Structure Details</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Structure Details</labelOverride>
        <masterLabel>Structure Details</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>