force-app/main/default/objects/Caz_Assessment__dlm/fields/clg_id__c.field-meta.xml
<CustomField>
    <fullName>clg_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CLG Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CLG Id</labelOverride>
        <masterLabel>CLG Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>