force-app/main/default/objects/Caz_Assessment__dlm/fields/confirmationcommercialnextsteps__c.field-meta.xml
<CustomField>
    <fullName>confirmationcommercialnextsteps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Commercial Next Steps</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Confirmation Commercial Next Steps</labelOverride>
        <masterLabel>Confirmation Commercial Next Steps</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>