force-app/main/default/objects/Caz_Assessment__dlm/fields/confirmationcommercialnextstepsselect__c.field-meta.xml
<CustomField>
    <fullName>confirmationcommercialnextstepsselect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConfirmationCommercialNextStepsSelect</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ConfirmationCommercialNextStepsSelect</labelOverride>
        <masterLabel>ConfirmationCommercialNextStepsSelect</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>