force-app/main/default/objects/Caz_Assessment__dlm/fields/confirmationcommercialreviewsummary__c.field-meta.xml
<CustomField>
    <fullName>confirmationcommercialreviewsummary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Commercial Review Summary</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Confirmation Commercial Review Summary</labelOverride>
        <masterLabel>Confirmation Commercial Review Summary</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>