force-app/main/default/objects/Caz_Assessment__dlm/fields/pba_otherofirelationship__c.field-meta.xml
<CustomField>
    <fullName>pba_otherofirelationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other OFI Relationship</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Other OFI Relationship</labelOverride>
        <masterLabel>Other OFI Relationship</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>