force-app/main/default/objects/Caz_Assessment__dlm/fields/pba_tellmeaboutyourpersonalfinancegoals__c.field-meta.xml
<CustomField>
    <fullName>pba_tellmeaboutyourpersonalfinancegoals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tell Me About Your Personal Fin Goals</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tell Me About Your Personal Fin Goals</labelOverride>
        <masterLabel>Tell Me About Your Personal Fin Goals</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>