force-app/main/default/objects/Caz_Assessment__dlm/fields/tba_averagesaleamount__c.field-meta.xml
<CustomField>
    <fullName>tba_averagesaleamount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Average Sale Amount</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Average Sale Amount</labelOverride>
        <masterLabel>Average Sale Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>