force-app/main/default/objects/Caz_Assessment__dlm/fields/tba_businessorpersonalcreditcard__c.field-meta.xml
<CustomField>
    <fullName>tba_businessorpersonalcreditcard__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Or Personal Credit Card</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Business Or Personal Credit Card</labelOverride>
        <masterLabel>Business Or Personal Credit Card</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>