force-app/main/default/objects/Caz_Assessment__dlm/fields/tba_discussedworkingcapitalpositionagri__c.field-meta.xml
<CustomField>
    <fullName>tba_discussedworkingcapitalpositionagri__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discussed Working Capital Position Agri</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Discussed Working Capital Position Agri</labelOverride>
        <masterLabel>Discussed Working Capital Position Agri</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>