force-app/main/default/objects/Caz_Assessment__dlm/fields/tba_doyouimportexport__c.field-meta.xml
<CustomField>
    <fullName>tba_doyouimportexport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Do You Import Export</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Do You Import Export</labelOverride>
        <masterLabel>Do You Import Export</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>