force-app/main/default/objects/Caz_Assessment__dlm/fields/tbc_monthswithsurpluscash__c.field-meta.xml
<CustomField>
    <fullName>tbc_monthswithsurpluscash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Months With Surplus Cash</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Months With Surplus Cash</labelOverride>
        <masterLabel>Months With Surplus Cash</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>