force-app/main/default/objects/Caz_Assessment__dlm/fields/tbc_receivepayincurrencycountry__c.field-meta.xml
<CustomField>
    <fullName>tbc_receivepayincurrencycountry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receive Pay In Currency Country</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Receive Pay In Currency Country</labelOverride>
        <masterLabel>Receive Pay In Currency Country</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>