force-app/main/default/objects/Caz_Assessment__dlm/fields/tbc_terminalpreference__c.field-meta.xml
<CustomField>
    <fullName>tbc_terminalpreference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal Preference</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Terminal Preference</labelOverride>
        <masterLabel>Terminal Preference</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>