force-app/main/default/objects/Caz_Assessment__dlm/fields/tbc_transactionspermonth__c.field-meta.xml
<CustomField>
    <fullName>tbc_transactionspermonth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transactions Per Month</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Transactions Per Month</labelOverride>
        <masterLabel>Transactions Per Month</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>